# grant-program

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  check  package-lock.json
.github/workflows/: frontend.yml  pre-commit.yml  push-token-dispenser-datadog-image.yml  token-dispenser.yml
frontend/: .env.sample  .gitignore  .prettierignore  DATABASE.md  Dockerfile.datadog  MIGRATIONS.md  README.md  middleware.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/anchor/: test.ts  token_dispenser.json  token_dispenser.ts
frontend/claim_sdk/: claim.ts  eventSubscriber.ts  index.ts  merkleTree.test.ts  merkleTree.ts  solana.ts  testWallets.ts
frontend/components/: Box.tsx  CheckBox.tsx  Coins.tsx  DiscordButton.tsx  DiscordSignButton.tsx  Dropdown.tsx  EcosystemConnectButton.tsx  EcosystemProvider.tsx  EcosystemSignButton.tsx  EvmLogo.tsx  Footer.tsx  Header.tsx  Layout.tsx  Modal.tsx  TokenDispenserProvider.tsx  Tooltip.tsx
frontend/hooks/: useAddress.tsx  useCoins.tsx  useConnectedAndSignedEcosystem.tsx  useDiscordSignMessage.tsx  useGetClaim.tsx  useGetClaimInfo.ts  useGetEcosystemIdentity.ts  useGetEligibility.ts  useIsClaimAlreadySubmitted.ts  useSignAndClaimRowState.ts  useSignMessage.tsx  useTokenDispenserProvider.tsx  useTotalGrantedCoins.tsx
frontend/integration/: api.test.ts  api.ts  apiTest.test.ts  integrationTest.test.ts
frontend/migrations/: 1689000281547_create-tables.sql  1689001911180_add-test-rows.sql  1695205966535_create-evm-breakdowns.sql  1696591445922_solana-breakdown.sql
frontend/pages/: _app.tsx  _document.tsx  _error.tsx  blocked.tsx  claim-tokens.tsx  claim-ui.tsx  claim.tsx  claimed.tsx  discord-login.tsx  discord-logout.tsx  index.tsx  login-solana.tsx  next-steps.tsx  review-eligibility.tsx  staking.tsx  verify-eligibility.tsx
token-dispenser/: Anchor.toml  Cargo.toml  rustfmt.toml  tsconfig.json
token-dispenser/programs/token-dispenser/: Cargo.toml  output.rs
token-dispenser/programs/token-dispenser/src/: lib.rs
token-dispenser/programs/token-dispenser/src/ecosystems/: aptos.rs  cosmos.rs  discord.rs  ed25519.rs  evm.rs  mod.rs  secp256k1.rs  solana.rs  sui.rs
token-dispenser/programs/token-dispenser/src/tests/: dispenser_simulator.rs  mod.rs  test_aptos.rs  test_checkout.rs  test_claim.rs  test_cosmos.rs  test_discord.rs  test_ed25519.rs  test_evm.rs  test_happy_path.rs  test_initialize.rs  test_injective.rs  test_merkle_tree.rs  test_secp256k1.rs  test_solana.rs  test_verify_sig.rs  test_verify_sig_aptos.rs  test_verify_sig_eth.rs  verify.rs
(+111 files in other folders)
