[package]
name = "token-dispenser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_dispenser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
bech32 = "0.9.1"
libsecp256k1-core = "0.3.0"
pythnet-sdk = { git = "https://github.com/pyth-network/pyth-crosschain.git"}
ripemd = "0.1.3"

[dev-dependencies]
solana-program-test = "1.14.16"
solana-sdk = "1.14.16"
libsecp256k1 = "0.7.1"
rand = "0.8.5"
