[package]
name = "token-dispenser"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "token_dispenser"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
# anchor-spl includes spl-token-2022 by default which causes compile issues and isn't needed
anchor-spl = { version = "0.27.0", default-features = false, features = ["mint", "token", "associated_token"]}
base64 = "0.21.2"
bech32 = "0.9.1"
blake2-rfc = "0.2.18"
pythnet-sdk = { git = "https://github.com/pyth-network/pyth-crosschain.git"}
ripemd = "0.1.3"
serde = "1.0.166"
serde_json = "1.0.99"
sha3 = "0.10.8"
residua-uleb128 = "0.2.0"
solana-address-lookup-table-program = "1.14.16"

[dev-dependencies]
hex = "0.4.3"
solana-program-test = "1.14.16"
solana-sdk = "1.14.16"
libsecp256k1 = "0.7.1"
rand = "0.8.5"
rand_compatible = { version = "0.7.0", package = "rand" }
ed25519-dalek = "1.0.1"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }
